<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.kotlineatitv2client.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.kotlineatitv2client.ui.menu.MenuFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_food_list"
        android:name="com.example.kotlineatitv2client.ui.foodlist.FoodListFragment"
        android:label="@string/food_list"
        tools:layout="@layout/fragment_food_list" />

    <fragment
        android:id="@+id/nav_food_detail"
        android:name="com.example.kotlineatitv2client.ui.fooddetail.FoodDetailFragment"
        android:label="@string/food_detail"
        tools:layout="@layout/fragment_food_detail" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.kotlineatitv2client.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

</navigation>